Bug 397081 - Copy Dock is not moving new created dock to free edge at explicit screen
Summary: Copy Dock is not moving new created dock to free edge at explicit screen
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-02 07:42 UTC by Michail Vourlakos
Modified: 2018-08-02 11:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2018-08-02 07:42:03 UTC
Copy Dock is not moving new created dock to free edge at explicit screen...
Comment 1 Michail Vourlakos 2018-08-02 11:26:33 UTC
Git commit 30c90d2a419c8c367a7a2f3887b7a11bd4f8de6b by Michail Vourlakos.
Committed on 02/08/2018 at 10:26.
Pushed by mvourlakos into branch 'master'.

More predictable copy function for multi-screen

--Improve the series of events in order for CopyDock
to work better in multi-screen environments. Copy Dock
should create the same dock in the same free edge at
different explicit screen when that edge is already
occupied in the origin screen
FIXED-IN: 0.8.1

M  +32   -7    app/layout.cpp
M  +7    -1    app/layout.h

https://commits.kde.org/latte-dock/30c90d2a419c8c367a7a2f3887b7a11bd4f8de6b
Comment 2 Michail Vourlakos 2018-08-02 11:31:29 UTC
Git commit b19702987f89982878a0c0dd53cf3692b9bd4190 by Michail Vourlakos.
Committed on 02/08/2018 at 11:27.
Pushed by mvourlakos into branch 'v0.8'.

More predictable copy function for multi-screen

--Improve the series of events in order for CopyDock
to work better in multi-screen environments. Copy Dock
should create the same dock in the same free edge at
different explicit screen when that edge is already
occupied in the origin screen
FIXED-IN: 0.8.1
(cherry picked from commit 30c90d2a419c8c367a7a2f3887b7a11bd4f8de6b)

M  +32   -7    app/layout.cpp
M  +7    -1    app/layout.h

https://commits.kde.org/latte-dock/b19702987f89982878a0c0dd53cf3692b9bd4190