More predictable copy function for multi-screen

--Improve the series of events in order for CopyDock
to work better in multi-screen environments. Copy Dock
should create the same dock in the same free edge at
different explicit screen when that edge is already
occupied in the origin screen

BUG: 397081
FIXED-IN: 0.8.1
(cherry picked from commit 30c90d2a419c8c367a7a2f3887b7a11bd4f8de6b)